packages/win32/src/user32.g.h

MYLIB_EXPORT Win32Result GetPointerTouchInfo_Wrapper(unsigned long pointerId, POINTER_TOUCH_INFO* touchInfo);
MYLIB_EXPORT Win32Result GetPointerTouchInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, POINTER_TOUCH_INFO* touchInfo);
MYLIB_EXPORT Win32Result GetPointerType_Wrapper(unsigned long pointerId, LONG* pointerType);
MYLIB_EXPORT Win32Result GetPriorityClipboardFormat_Wrapper(unsigned long* paFormatPriorityList, int cFormats);
MYLIB_EXPORT Win32Result GetProcessWindowStation_Wrapper();
MYLIB_EXPORT Win32Result GetRawInputBuffer_Wrapper(RAWINPUT* pData, unsigned long* pcbSize, unsigned long cbSizeHeader);
MYLIB_EXPORT Win32Result GetRawInputDeviceInfoW_Wrapper(HANDLE hDevice, DWORD uiCommand, void* pData, unsigned long* pcbSize);
MYLIB_EXPORT Win32Result GetRawInputDeviceList_Wrapper(RAWINPUTDEVICELIST* pRawInputDeviceList, unsigned long* puiNumDevices, unsigned long cbSize);
MYLIB_EXPORT Win32Result GetRegisteredRawInputDevices_Wrapper(RAWINPUTDEVICE* pRawInputDevices, unsigned long* puiNumDevices, unsigned long cbSize);
MYLIB_EXPORT Win32Result GetScrollBarInfo_Wrapper(HWND hwnd, LONG idObject, SCROLLBARINFO* psbi);
MYLIB_EXPORT Win32Result GetScrollInfo_Wrapper(HWND hwnd, LONG nBar, SCROLLINFO* lpsi);
MYLIB_EXPORT Win32Result GetSystemMetricsForDpi_Wrapper(LONG nIndex, unsigned long dpi);
MYLIB_EXPORT Win32Result GetThreadDesktop_Wrapper(unsigned long dwThreadId);
MYLIB_EXPORT Win32Result GetTitleBarInfo_Wrapper(HWND hwnd, TITLEBARINFO* pti);
MYLIB_EXPORT Win32Result GetTopWindow_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result GetTouchInputInfo_Wrapper(HTOUCHINPUT hTouchInput, unsigned long cInputs, TOUCHINPUT* pInputs, int cbSize);
MYLIB_EXPORT Win32Result GetUpdatedClipboardFormats_Wrapper(unsigned long* lpuiFormats, unsigned long cFormats, unsigned long* pcFormatsOut);
MYLIB_EXPORT Win32Result GetUserObjectInformationW_Wrapper(HANDLE hObj, LONG nIndex, void* pvInfo, unsigned long nLength, unsigned long* lpnLengthNeeded);
MYLIB_EXPORT Win32Result GetWindow_Wrapper(HWND hWnd, DWORD uCmd);
MYLIB_EXPORT Win32Result GetWindowDisplayAffinity_Wrapper(HWND hWnd, unsigned long* pdwAffinity);
MYLIB_EXPORT Win32Result GetWindowInfo_Wrapper(HWND hwnd, WINDOWINFO* pwi);
MYLIB_EXPORT Win32Result GetWindowLongPtrW_Wrapper(HWND hWnd, LONG nIndex);
MYLIB_EXPORT Win32Result GetWindowPlacement_Wrapper(HWND hWnd, WINDOWPLACEMENT* lpwndpl);
MYLIB_EXPORT Win32Result GetWindowRect_Wrapper(HWND hWnd, RECT* lpRect);
MYLIB_EXPORT Win32Result GetWindowTextW_Wrapper(HWND hWnd, PWSTR lpString, int nMaxCount);
MYLIB_EXPORT Win32Result GetWindowTextLengthW_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result HideCaret_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result InsertMenuW_Wrapper(HMENU hMenu, unsigned long uPosition, DWORD uFlags, unsigned long long uIDNewItem, PCWSTR lpNewItem);
MYLIB_EXPORT Win32Result InsertMenuItemW_Wrapper(HMENU hmenu, unsigned long item, BOOL fByPosition, MENUITEMINFOW* lpmi);
MYLIB_EXPORT Win32Result IsClipboardFormatAvailable_Wrapper(unsigned long format);
MYLIB_EXPORT Win32Result IsImmersiveProcess_Wrapper(HANDLE hProcess);
MYLIB_EXPORT Win32Result KillTimer_Wrapper(HWND hWnd, unsigned long long uIDEvent);
MYLIB_EXPORT Win32Result LoadAcceleratorsW_Wrapper(HINSTANCE hInstance, PCWSTR lpTableName);
MYLIB_EXPORT Win32Result LoadCursorW_Wrapper(HINSTANCE hInstance, PCWSTR lpCursorName);
MYLIB_EXPORT Win32Result LoadCursorFromFileW_Wrapper(PCWSTR lpFileName);
MYLIB_EXPORT Win32Result LoadIconW_Wrapper(HINSTANCE hInstance, PCWSTR lpIconName);
MYLIB_EXPORT Win32Result LoadImageW_Wrapper(HINSTANCE hInst, PCWSTR name, DWORD type, int cx, int cy, DWORD fuLoad);
MYLIB_EXPORT Win32Result LoadKeyboardLayoutW_Wrapper(PCWSTR pwszKLID, DWORD flags);
MYLIB_EXPORT Win32Result LoadMenuW_Wrapper(HINSTANCE hInstance, PCWSTR lpMenuName);
MYLIB_EXPORT Win32Result LoadMenuIndirectW_Wrapper(void* lpMenuTemplate);
MYLIB_EXPORT Win32Result LoadStringW_Wrapper(HINSTANCE hInstance, unsigned long uID, PWSTR lpBuffer, int cchBufferMax);
MYLIB_EXPORT Win32Result LockSetForegroundWindow_Wrapper(DWORD uLockCode);
MYLIB_EXPORT Win32Result LockWorkStation_Wrapper();
MYLIB_EXPORT Win32Result LookupIconIdFromDirectory_Wrapper(unsigned char* presbits, BOOL fIcon);
MYLIB_EXPORT Win32Result LookupIconIdFromDirectoryEx_Wrapper(unsigned char* presbits, BOOL fIcon, int cxDesired, int cyDesired, DWORD flags);
MYLIB_EXPORT Win32Result MapDialogRect_Wrapper(HWND hDlg, RECT* lpRect);
MYLIB_EXPORT Win32Result MessageBoxW_Wrapper(HWND hWnd, PCWSTR lpText, PCWSTR lpCaption, DWORD uType);
MYLIB_EXPORT Win32Result MessageBoxExW_Wrapper(HWND hWnd, PCWSTR lpText, PCWSTR lpCaption, DWORD uType, unsigned short wLanguageId);
MYLIB_EXPORT Win32Result ModifyMenuW_Wrapper(HMENU hMnu, unsigned long uPosition, DWORD uFlags, unsigned long long uIDNewItem, PCWSTR lpNewItem);
MYLIB_EXPORT Win32Result MoveWindow_Wrapper(HWND hWnd, int x, int y, int nWidth, int nHeight, BOOL bRepaint);
MYLIB_EXPORT Win32Result MsgWaitForMultipleObjects_Wrapper(unsigned long nCount, HANDLE* pHandles, BOOL fWaitAll, unsigned long dwMilliseconds, DWORD dwWakeMask);
MYLIB_EXPORT Win32Result MsgWaitForMultipleObjectsEx_Wrapper(unsigned long nCount, HANDLE* pHandles, unsigned long dwMilliseconds, DWORD dwWakeMask, DWORD dwFlags);
MYLIB_EXPORT Win32Result OpenClipboard_Wrapper(HWND hWndNewOwner);
MYLIB_EXPORT Win32Result OpenDesktopW_Wrapper(PCWSTR lpszDesktop, DWORD dwFlags, BOOL fInherit, unsigned long dwDesiredAccess);
MYLIB_EXPORT Win32Result OpenIcon_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result OpenInputDesktop_Wrapper(DWORD dwFlags, BOOL fInherit, DWORD dwDesiredAccess);
MYLIB_EXPORT Win32Result OpenWindowStationW_Wrapper(PCWSTR lpszWinSta, BOOL fInherit, unsigned long dwDesiredAccess);
MYLIB_EXPORT Win32Result PostMessageW_Wrapper(HWND hWnd, unsigned long msg, WPARAM wParam, LPARAM lParam);
MYLIB_EXPORT Win32Result PostThreadMessageW_Wrapper(unsigned long idThread, unsigned long msg, WPARAM wParam, LPARAM lParam);
MYLIB_EXPORT Win32Result RegisterClassW_Wrapper(WNDCLASSW* lpWndClass);
MYLIB_EXPORT Win32Result RegisterClassExW_Wrapper(WNDCLASSEXW* param0);
MYLIB_EXPORT Win32Result RegisterClipboardFormatW_Wrapper(PCWSTR lpszFormat);
MYLIB_EXPORT Win32Result RegisterDeviceNotificationW_Wrapper(HANDLE hRecipient, void* notificationFilter, DWORD flags);
MYLIB_EXPORT Win32Result RegisterHotKey_Wrapper(HWND hWnd, int id, DWORD fsModifiers, unsigned long vk);
MYLIB_EXPORT Win32Result RegisterPowerSettingNotification_Wrapper(HANDLE hRecipient, GUID* powerSettingGuid, DWORD flags);
MYLIB_EXPORT Win32Result RegisterRawInputDevices_Wrapper(RAWINPUTDEVICE* pRawInputDevices, unsigned long uiNumDevices, unsigned long cbSize);