packages/win32/lib/src/_internal/user32.g.dart


@internal
@Native<NativeWin32Result Function(Uint32, Pointer<POINTER_TOUCH_INFO>)>()
external NativeWin32Result GetPointerTouchInfo_Wrapper(
  int pointerId,
  Pointer<POINTER_TOUCH_INFO> touchInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Pointer<POINTER_TOUCH_INFO>,
  )
>()
external NativeWin32Result GetPointerTouchInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<POINTER_TOUCH_INFO> touchInfo,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<Int32>)>()
external NativeWin32Result GetPointerType_Wrapper(
  int pointerId,
  Pointer<Int32> pointerType,
);

@internal
@Native<NativeWin32Result Function(Pointer<Uint32>, Int32)>()
external NativeWin32Result GetPriorityClipboardFormat_Wrapper(
  Pointer<Uint32> paFormatPriorityList,
  int cFormats,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetProcessWindowStation_Wrapper();

@internal
@Native<
  NativeWin32Result Function(Pointer<RAWINPUT>, Pointer<Uint32>, Uint32)
>()
external NativeWin32Result GetRawInputBuffer_Wrapper(
  Pointer<RAWINPUT> pData,
  Pointer<Uint32> pcbSize,
  int cbSizeHeader,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Pointer, Pointer<Uint32>)>()
external NativeWin32Result GetRawInputDeviceInfoW_Wrapper(
  int hDevice,
  int uiCommand,
  Pointer pData,
  Pointer<Uint32> pcbSize,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<RAWINPUTDEVICELIST>,
    Pointer<Uint32>,
    Uint32,
  )
>()
external NativeWin32Result GetRawInputDeviceList_Wrapper(
  Pointer<RAWINPUTDEVICELIST> pRawInputDeviceList,
  Pointer<Uint32> puiNumDevices,
  int cbSize,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<RAWINPUTDEVICE>, Pointer<Uint32>, Uint32)
>()
external NativeWin32Result GetRegisteredRawInputDevices_Wrapper(
  Pointer<RAWINPUTDEVICE> pRawInputDevices,
  Pointer<Uint32> puiNumDevices,
  int cbSize,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Pointer<SCROLLBARINFO>)>()
external NativeWin32Result GetScrollBarInfo_Wrapper(
  int hwnd,
  int idObject,
  Pointer<SCROLLBARINFO> psbi,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Pointer<SCROLLINFO>)>()
external NativeWin32Result GetScrollInfo_Wrapper(
  int hwnd,
  int nBar,
  Pointer<SCROLLINFO> lpsi,
);

@internal
@Native<NativeWin32Result Function(Int32, Uint32)>()
external NativeWin32Result GetSystemMetricsForDpi_Wrapper(int nIndex, int dpi);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result GetThreadDesktop_Wrapper(int dwThreadId);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<TITLEBARINFO>)>()
external NativeWin32Result GetTitleBarInfo_Wrapper(
  int hwnd,
  Pointer<TITLEBARINFO> pti,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result GetTopWindow_Wrapper(int hWnd);

@internal
@Native<
  NativeWin32Result Function(HTOUCHINPUT, Uint32, Pointer<TOUCHINPUT>, Int32)
>()
external NativeWin32Result GetTouchInputInfo_Wrapper(
  int hTouchInput,
  int cInputs,
  Pointer<TOUCHINPUT> pInputs,
  int cbSize,
);

@internal
@Native<NativeWin32Result Function(Pointer<Uint32>, Uint32, Pointer<Uint32>)>()
external NativeWin32Result GetUpdatedClipboardFormats_Wrapper(
  Pointer<Uint32> lpuiFormats,
  int cFormats,
  Pointer<Uint32> pcFormatsOut,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Int32, Pointer, Uint32, Pointer<Uint32>)
>()
external NativeWin32Result GetUserObjectInformationW_Wrapper(
  int hObj,
  int nIndex,
  Pointer pvInfo,
  int nLength,
  Pointer<Uint32> lpnLengthNeeded,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32)>()
external NativeWin32Result GetWindow_Wrapper(int hWnd, int uCmd);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<Uint32>)>()
external NativeWin32Result GetWindowDisplayAffinity_Wrapper(
  int hWnd,
  Pointer<Uint32> pdwAffinity,
);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<WINDOWINFO>)>()
external NativeWin32Result GetWindowInfo_Wrapper(
  int hwnd,
  Pointer<WINDOWINFO> pwi,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32)>()
external NativeWin32Result GetWindowLongPtrW_Wrapper(int hWnd, int nIndex);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<WINDOWPLACEMENT>)>()
external NativeWin32Result GetWindowPlacement_Wrapper(
  int hWnd,
  Pointer<WINDOWPLACEMENT> lpwndpl,
);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<RECT>)>()
external NativeWin32Result GetWindowRect_Wrapper(
  int hWnd,
  Pointer<RECT> lpRect,
);

@internal
@Native<NativeWin32Result Function(HWND, PWSTR, Int32)>()
external NativeWin32Result GetWindowTextW_Wrapper(
  int hWnd,
  PWSTR lpString,
  int nMaxCount,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result GetWindowTextLengthW_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result HideCaret_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32, IntPtr, PCWSTR)>()
external NativeWin32Result InsertMenuW_Wrapper(
  int hMenu,
  int uPosition,
  int uFlags,
  int uIDNewItem,
  PCWSTR lpNewItem,
);

@internal
@Native<
  NativeWin32Result Function(HMENU, Uint32, BOOL, Pointer<MENUITEMINFO>)
>()
external NativeWin32Result InsertMenuItemW_Wrapper(
  int hmenu,
  int item,
  int fByPosition,
  Pointer<MENUITEMINFO> lpmi,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result IsClipboardFormatAvailable_Wrapper(int format);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result IsImmersiveProcess_Wrapper(int hProcess);

@internal
@Native<NativeWin32Result Function(HWND, IntPtr)>()
external NativeWin32Result KillTimer_Wrapper(int hWnd, int uIDEvent);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR)>()
external NativeWin32Result LoadAcceleratorsW_Wrapper(
  int hInstance,
  PCWSTR lpTableName,
);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR)>()
external NativeWin32Result LoadCursorW_Wrapper(
  int hInstance,
  PCWSTR lpCursorName,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result LoadCursorFromFileW_Wrapper(PCWSTR lpFileName);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR)>()
external NativeWin32Result LoadIconW_Wrapper(int hInstance, PCWSTR lpIconName);

@internal
@Native<
  NativeWin32Result Function(HINSTANCE, PCWSTR, Uint32, Int32, Int32, Uint32)
>()
external NativeWin32Result LoadImageW_Wrapper(
  int hInst,
  PCWSTR name,
  int type,
  int cx,
  int cy,
  int fuLoad,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32)>()
external NativeWin32Result LoadKeyboardLayoutW_Wrapper(
  PCWSTR pwszKLID,
  int flags,
);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR)>()
external NativeWin32Result LoadMenuW_Wrapper(int hInstance, PCWSTR lpMenuName);

@internal
@Native<NativeWin32Result Function(Pointer)>()
external NativeWin32Result LoadMenuIndirectW_Wrapper(Pointer lpMenuTemplate);

@internal
@Native<NativeWin32Result Function(HINSTANCE, Uint32, PWSTR, Int32)>()
external NativeWin32Result LoadStringW_Wrapper(
  int hInstance,
  int uID,
  PWSTR lpBuffer,
  int cchBufferMax,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result LockSetForegroundWindow_Wrapper(int uLockCode);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result LockWorkStation_Wrapper();

@internal
@Native<NativeWin32Result Function(Pointer<Uint8>, BOOL)>()
external NativeWin32Result LookupIconIdFromDirectory_Wrapper(
  Pointer<Uint8> presbits,
  int fIcon,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<Uint8>, BOOL, Int32, Int32, Uint32)
>()
external NativeWin32Result LookupIconIdFromDirectoryEx_Wrapper(
  Pointer<Uint8> presbits,
  int fIcon,
  int cxDesired,
  int cyDesired,
  int flags,
);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<RECT>)>()
external NativeWin32Result MapDialogRect_Wrapper(
  int hDlg,
  Pointer<RECT> lpRect,
);

@internal
@Native<NativeWin32Result Function(HWND, PCWSTR, PCWSTR, Uint32)>()
external NativeWin32Result MessageBoxW_Wrapper(
  int hWnd,
  PCWSTR lpText,
  PCWSTR lpCaption,
  int uType,
);

@internal
@Native<NativeWin32Result Function(HWND, PCWSTR, PCWSTR, Uint32, Uint16)>()
external NativeWin32Result MessageBoxExW_Wrapper(
  int hWnd,
  PCWSTR lpText,
  PCWSTR lpCaption,
  int uType,
  int wLanguageId,
);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32, IntPtr, PCWSTR)>()
external NativeWin32Result ModifyMenuW_Wrapper(
  int hMnu,
  int uPosition,
  int uFlags,
  int uIDNewItem,
  PCWSTR lpNewItem,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Int32, Int32, Int32, BOOL)>()
external NativeWin32Result MoveWindow_Wrapper(
  int hWnd,
  int x,
  int y,
  int nWidth,
  int nHeight,
  int bRepaint,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<HANDLE>, BOOL, Uint32, Uint32)
>()
external NativeWin32Result MsgWaitForMultipleObjects_Wrapper(
  int nCount,
  Pointer<HANDLE> pHandles,
  int fWaitAll,
  int dwMilliseconds,
  int dwWakeMask,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<HANDLE>, Uint32, Uint32, Uint32)
>()
external NativeWin32Result MsgWaitForMultipleObjectsEx_Wrapper(
  int nCount,
  Pointer<HANDLE> pHandles,
  int dwMilliseconds,
  int dwWakeMask,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result OpenClipboard_Wrapper(int hWndNewOwner);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32, BOOL, Uint32)>()
external NativeWin32Result OpenDesktopW_Wrapper(
  PCWSTR lpszDesktop,
  int dwFlags,
  int fInherit,
  int dwDesiredAccess,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result OpenIcon_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(Uint32, BOOL, Uint32)>()
external NativeWin32Result OpenInputDesktop_Wrapper(
  int dwFlags,
  int fInherit,
  int dwDesiredAccess,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, BOOL, Uint32)>()
external NativeWin32Result OpenWindowStationW_Wrapper(
  PCWSTR lpszWinSta,
  int fInherit,
  int dwDesiredAccess,
);

@internal
@Native<NativeWin32Result Function(HWND, Uint32, WPARAM, LPARAM)>()
external NativeWin32Result PostMessageW_Wrapper(
  int hWnd,
  int msg,
  int wParam,
  int lParam,
);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32, WPARAM, LPARAM)>()
external NativeWin32Result PostThreadMessageW_Wrapper(
  int idThread,
  int msg,
  int wParam,
  int lParam,
);

@internal
@Native<NativeWin32Result Function(Pointer<WNDCLASS>)>()
external NativeWin32Result RegisterClassW_Wrapper(Pointer<WNDCLASS> lpWndClass);

@internal
@Native<NativeWin32Result Function(Pointer<WNDCLASSEX>)>()
external NativeWin32Result RegisterClassExW_Wrapper(Pointer<WNDCLASSEX> param0);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result RegisterClipboardFormatW_Wrapper(PCWSTR lpszFormat);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer, Uint32)>()
external NativeWin32Result RegisterDeviceNotificationW_Wrapper(
  int hRecipient,
  Pointer notificationFilter,
  int flags,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Uint32, Uint32)>()
external NativeWin32Result RegisterHotKey_Wrapper(
  int hWnd,
  int id,
  int fsModifiers,
  int vk,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<GUID>, Uint32)>()
external NativeWin32Result RegisterPowerSettingNotification_Wrapper(
  int hRecipient,
  Pointer<GUID> powerSettingGuid,
  int flags,
);

@internal
@Native<NativeWin32Result Function(Pointer<RAWINPUTDEVICE>, Uint32, Uint32)>()
external NativeWin32Result RegisterRawInputDevices_Wrapper(
  Pointer<RAWINPUTDEVICE> pRawInputDevices,
  int uiNumDevices,
  int cbSize,
);
